--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "mcs-navbar": "github:MCSEvolved/Navbar",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "svelte-preprocess-react": "^0.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
