--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/signalr": "^7.0.9",
+    "axios": "^1.4.0",
+    "cntl": "^1.0.0",
+    "firebase": "^10.0.0",
     "mcs-navbar": "github:MCSEvolved/Navbar",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
