Added navbar redirect on logo

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_SERVER_URL = "https://api.mcsynergy.nl/tracker/"
 VITE_MCS_API_URL = "https://api.mcsynergy.nl/mcs-api/"
+VITE_HOST = "https://mcsynergy.nl/tracker"
