--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ VITE_SERVER_URL = "https://api.mcsynergy.nl/tracker/"
 VITE_MCS_API_URL = "https://api.mcsynergy.nl/mcs-api/"
 VITE_AUTH_URL = "https://api.mcsynergy.nl/auth/"
 VITE_HOST = "https://mcsynergy.nl/tracker"
+VITE_LOGIN_URL = "https://mcsynergy.nl/login"
