--- a/.github/workflows/rootbuild.yaml
+++ b/.github/workflows/rootbuild.yaml
@@ -20,7 +20,7 @@ jobs:
         run: npm install
           
       - name: Build
-        run: npm run staging
+        run: npm run build
         
       - name: Emit rootbuild repository_dispatch
         run: |
