different titles for different env

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VITE_MCS_API_URL = "https://api.mcsynergy.nl/mcs-api/"
 VITE_AUTH_URL = "https://api.mcsynergy.nl/auth/"
 VITE_HOST = "https://mcsynergy.nl/tracker"
 VITE_LOGIN_URL = "https://mcsynergy.nl/login"
+VITE_APP_TITLE="MCS Tracker"
