--- a/.env.staging
+++ b/.env.staging
@@ -1,2 +1,3 @@
 VITE_HOST = "https://dev.mcsynergy.nl/tracker"
 VITE_LOGIN_URL = "https://dev.mcsynergy.nl/login"
+VITE_APP_TITLE = "MCS Tracker (Dev)"
